[package]
name = "rml"
version = "0.1.0"
authors = ["Moritz Drexl <mdrexl@fastmail.fm>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = "0.27.1"
eframe = { version = "0.27.1", default-features = false, features = ["glow", "persistence"] }


ndarray = { version = "0.13", features = ["blas"] }
cblas = "0.2"
blas-src = { version = "0.6", features = ["accelerate"] }




crossbeam = "0.8.4"
rand = "0.8.5"

# plotters = { version = "0.3", default-features = false, features = ["line_series"] }


nom = { version = "7.1.3", default-features = false }

petgraph = { version = "0.6.5", default-features = false }

rapier2d = "0.19"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
rand = "0.8.5"
puffin = {version = "0.19.0", optional = true }
puffin_http = { version = "0.16", optional = true }


[profile.release]
lto = true
opt-level = 'z'

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
