[package]
name = "rml"
version = "0.1.0"
authors = ["Moritz Drexl <mdrexl@fastmail.fm>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = ["glow", "persistence"] }

egui-plotter = { git = "https://github.com/themoritz/egui-plotter", branch = "earcutr" }
plotters = { version = "0.3.1", default-features = false, features = ["line_series"] }


# ndarray = { version = "0.13", features = ["blas"] }
# cblas = "0.2"
# blas-src = { version = "0.6", features = ["accelerate"] }
# nom = { version = "7.1.3", default-features = false }
petgraph = { version = "0.6.5", default-features = false }
# rapier2d = "0.19"
rand = "0.8.5"
web-time = "1.1.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
puffin = {version = "0.19.0", optional = true }
puffin_http = { version = "0.16", optional = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.42"
getrandom = { version = "0.2.15", features = ["js"] }

[profile.release]
lto = true
opt-level = 'z'

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
